feat: changes for a-s have been done

--- a/pages/project.html
+++ b/pages/project.html
@@ -5,26 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
-
     <header>
         <nav>
             <i class="fa-solid fa-bars"></i>
             <h1>First</h1>
             <ul>
+                <a href="../index.html">Home</a>
+                <a href="../pages/about.html">About</a>
+                <a href="../pages/services.html">Services</a>
                 <a style="  border-bottom: 2px solid #14B789; color: #14B789; padding-top: 4px; height: 30px; "
-                    href="index.html">Home</a>
-                <a href="./pages/about.html">About</a>
-                <a href="./pages/contact.html">Services</a>
-                <a href="./pages/project.html">Projects</a>
-                <a href="./pages/services.html">Contact</a>
+                    href="./project.html">Projects</a>
+                <a href="../pages/contact.html">Contact</a>
             </ul>
 
             <div class="sides-header1">
@@ -69,8 +67,8 @@
                 <div class="mother-pic-sec1">
                     <div class="sec1-pic">
                         <div>
-                            <img class="sec1-img " src="./assets/portrait-happy-excited-man-holding-laptop-computer.png"
-                                alt="">
+                            <img class="sec1-img "
+                                src="../assets/portrait-happy-excited-man-holding-laptop-computer.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -167,11 +165,11 @@
         <section id="sec4-pg1">
             <div>
                 <h1>Companies I've had worked</h1>
-                <div class="imgs"><img src="./assets/cachet.svg" alt="">
-                    <img src="./assets/guitar-center.svg" alt="">
-                    <img src="./assets/profil-rejser.svg" alt="">
-                    <img src="./assets/shopify.svg" alt="">
-                    <img src="./assets/tokico.svg" alt="">
+                <div class="imgs"><img src="../assets/cachet.svg" alt="">
+                    <img src="../assets/guitar-center.svg" alt="">
+                    <img src="../assets/profil-rejser.svg" alt="">
+                    <img src="../assets/shopify.svg" alt="">
+                    <img src="../assets/tokico.svg" alt="">
                 </div>
 
 
@@ -182,7 +180,7 @@
             <div>
 
                 <div class="first-sec5">
-                    <img src="./assets/handshake-man-woman-after-signing-business-contract-closeup.jpg" alt="">
+                    <img src="../assets/handshake-man-woman-after-signing-business-contract-closeup.jpg" alt="">
                     <h1>Services</h1>
                 </div>
 
@@ -330,7 +328,7 @@
             <div>
 
                 <div class="sec6-first">
-                    <div class="end-sec6"><img src="./assets/white-desk-work-study-aesthetics.jpg" alt="">
+                    <div class="end-sec6"><img src="../assets/white-desk-work-study-aesthetics.jpg" alt="">
                         <h1>Projects</h1>
                     </div>
 
@@ -342,21 +340,21 @@
                     <span class="boxes-sec6">
                         <span>Branding</span>
                         <h3>Zoik agency</h3>
-                        <img src="./assets/nikhil-KO4io-eCAXA-unsplash.jpg" alt="">
+                        <img src="../assets/nikhil-KO4io-eCAXA-unsplash.jpg" alt="">
 
                     </span>
 
                     <span class="boxes-sec6">
                         <span>Photography</span>
                         <h3>The Watch</h3>
-                        <img src="./assets/the-5th-IQYR7N67dhM-unsplash.jpg" alt="">
+                        <img src="../assets/the-5th-IQYR7N67dhM-unsplash.jpg" alt="">
                     </span>
 
                     <span class="boxes-sec6">
                         <span>Website</span>
                         <h3>Polo</h3>
 
-                        <img src="./assets/true-agency-9Bjog5FZ-oc-unsplash.jpg" alt="">
+                        <img src="../assets/true-agency-9Bjog5FZ-oc-unsplash.jpg" alt="">
 
                     </span>
 
@@ -369,7 +367,7 @@
         <section id="sec7">
             <div>
                 <div class="sec7-first-row">
-                    <img src="./assets/aerial-view-man-using-computer-laptop-wooden-table.jpg" alt="">
+                    <img src="../assets/aerial-view-man-using-computer-laptop-wooden-table.jpg" alt="">
                     <h2>Say Hi</h2>
                 </div>
 
@@ -463,7 +461,7 @@
                         </span>
                         <span class="textarea-mom">
                             <textarea name="text" id="text">
-                                                        </textarea>
+                                                                    </textarea>
                             <label class="textarea" for="text">
                                 Tell me about the projects
                             </label>
