feat:it has been fixed

--- a/pages/about.html
+++ b/pages/about.html
@@ -89,7 +89,7 @@
 
                     <div class="first-info-sec2">
                         <h2>My Story</h2>
-                        <img src="./assets/sec1-man-text.jpg" alt="">
+                        <img src="../assets/sec1-man-text.jpg" alt="">
 
                     </div>
                     <div class="second-info-sec2">
